--- a/index.html
+++ b/index.html
@@ -105,20 +105,20 @@
           <h2>Mais Sobre</h2>
         <div class="duvida">
           <h3>Por que escolhi essa área?</h3>
-          <img src="img/arrow-down.svg" alt="" />
+          <img src="img/arrow-down.svg" alt="">
           <p class="paragrafo">
            Sempre fui fascinado por tecnologia. Durante a infância, sempre passava horas no computador, descobrindo funções e explorando as ferramentas. Quando conheci a programação, foi algo que deslumbrou minha mente, quanto mais eu estudava, mais eu percebia a imensidão de possibilidades que eu poderia fazer com aquilo. Então foi algo muito proporcional, cada vez que eu aprendo mais, mais tenho certeza que é isso que eu quero.
         </div>
         <div class="duvida">
           <h3>Estou trabalhando atualmente?</h3>
-          <img src="IMG/arrow-down.svg" alt="" />
+          <img src="IMG/arrow-down.svg" alt="">
           <p class="paragrafo">
             Não, estou à procura de um emprego fixo, aonde eu possa trabalhar e me dedicar ao meu desenvolvimento profissional e no desenvolvimento da empresa.
           </p>
         </div>
         <div class="duvida">
           <h3>Engenharia e Arquitetura?</h3>
-          <img src="IMG/arrow-down.svg" alt="" />
+          <img src="IMG/arrow-down.svg" alt="">
           <p class="paragrafo">
             Sim, eu tenho o curso técnico-integrado de Edificações, concluí junto ao ensino médio, no IFRN(Instituto Federal de educação, ciência e tecnologia do Rio Grande do Norte). Então eu sempre fui o ponto fora do padrão da turma, aonde todos diziam: "Engenharia Civil" ou "Arquitetura" como faculdade, eu dizia: "TI".
           </p>
